<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">在线新闻</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">53ed5edd</string>
    <string name="button_text_reload">重新连接</string>
    <string name="tip_text_data_loading">数据获取中...</string>
    <string name="tip_text_data_fail">数据获取失败，点击再次获取！</string>
    <string name="tip_speak_error">阅读错误！</string>
    <string name="exit_title">确认</string>
    <string name="exit_tip">是否退出？</string>
    <string name="exit_submit">确定</string>
    <string name="exit_cancel">取消</string>
    <string name="ignore_words_1">浏览原图</string>
    <string name="ignore_words_2">视频下载</string>

    <integer-array name="channel_ids">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </integer-array>

    <string-array name="channel_names">
        <item>国内</item>
        <item>国际</item>
        <item>社会</item>
        <item>财经</item>
        <item>经济</item>
        <item>IT</item>
        <item>HEU</item>
    </string-array>
    <string-array name="ignore_words">
        <item>浏览原图</item>
        <item>视频下载</item>
    </string-array>

    <string name="title_activity_title">TitleAct</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_resgister">Resgister</string>
   
    <string name="Collection">收藏</string>
    <string name="Headlines">要闻</string>
    <string name="Offline_Download">离线下载</string>
    <string name="Clear">清除缓存</string>
    <string name="Night_Mode">夜间模式</string>    
    <string name="No_Picture">2G/3G无图</string>
    <string name="Settings">更多设置</string>
       
    <string name="SettingsTop">设置</string>
      <string name="Font">字体大小</string>
        <string name="big">大</string>
        <string name="medium">中</string>
        <string name="small">小</string>
      <string name="Headlines_Push">要闻推送</string>
      <string name="OfflineSet">离线设置</string>
    
    <string name="Search">搜索</string>
    <string name="CoverStory">封面故事</string>
    <string name="Recommend">应用推荐</string>
    
    <string name="About">关于</string>    
    <string name="Feedback">意见反馈</string>
    <string name="Updates">检查更新</string>
    

    
    <string name="reback">返回</string>
    <string name="Comments">评论</string>
    
    
    <string name="C">您还没有任何收藏</string>
    <string name="Feedback1">你好，我是*****的产品经理，欢迎您的反馈使用产品的感受和建议</string>
    <string name="Feedback2">QQ、电话等我们能联系到您的方式</string>
    <string name="Feedback3">您的感受和建议</string>
    <string name="Feedback4">用户反馈</string>

    
</resources>