<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_title_bar"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/detail_type_title"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#FF0000FF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_load_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/color_2"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/detail_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/tip_text_data_loading"
            android:textColor="#FFFFFFFF" />

        <Button
            android:id="@+id/detail_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_reload_button_select"
            android:gravity="center"
            android:text="@string/button_text_reload"
            android:textColor="#FFFFFFFF"
            android:visibility="gone" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbars="none"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:background="@drawable/bg_all"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/detail_where_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="#FFFFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detail_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#FFFFFFFF"
                android:textSize="14sp" />
              <Button
            android:id="@+id/coll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_reload_button_select"
         
            android:text="收藏"
            android:textColor="#FFFFFFFF"
           />
                <Button
            android:id="@+id/tak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_reload_button_select"
      
            android:text="评论"
            android:textColor="#FFFFFFFF"
           />
        </LinearLayout>
    </ScrollView>

</LinearLayout>